--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ h3{font-size:25px;font-weight:italic;}
 <li style="display:inline-block;"><a href="index.html" style="background:lightblue; padding:8px 15px; color:white; text-decoration:none; border-radius:4px;">Home</a></li>
 <li style="display:inline-block;"><a href="sharks.html" style="background:lightblue; padding:8px 15px; color:white; text-decoration:none; border-radius:4px;">Stay</a></li
 <li style="display:inline-block;"><a href="peacocks.html" style="background:lightblue; padding:8px 15px; color:white; text-decoration:none; border-radius:4px;">Activities</a></li>
-<li style="display:inline-block;"><a href="peacocks.html" style="background:lightblue; padding:8px 15px; color:white; text-decoration:none; border-radius:4px;">Contact</a></li>
+<li style="display:inline-block;"><a href="contact.html" style="background:lightblue; padding:8px 15px; color:white; text-decoration:none; border-radius:4px;">Contact</a></li>
 </ul>
 </section>
 
