--- a/page2.html
+++ b/page2.html
@@ -50,7 +50,7 @@ h3{font-size:25px;font-weight:italic;}
 <div style=" width:85%; margin:0 auto;">
 <!--Section1--******-->
 <section style="overflow:hidden; padding:60px 0; border-bottom:4px groove green;">
-<img src="singapore.jpeg" width="200" height="200" style="float:left; margin-right:20px;">
+<img src="Singapore.jpeg" width="200" height="200" style="float:left; margin-right:20px;">
 
 <h1>Singapore</h1>
 <h3> places to visit</h3>
@@ -69,7 +69,7 @@ h3{font-size:25px;font-weight:italic;}
 </p> <a href="ornamental.html"style="background:lightblue; padding:8px 20px; text-decoration:none; border:2px solid black;">Ornamental</a> <br>
 
 <br>
-<img src="thailand.jpg" width="200" height="200"  style="float:left; margin-right:20px;"> <br>
+<img src="Thailand.jpg" width="200" height="200"  style="float:left; margin-right:20px;"> <br>
 <h1>Thailand</h1>
 <h3>places to visit</h3>
 <p>
