--- a/page2.html
+++ b/page2.html
@@ -29,7 +29,7 @@ h3{font-size:25px;font-weight:italic;}
 <ul style="word-spacing:40px;">
 <li style="display:inline-block;"><a href="index.html" style="background:lightblue; padding:8px 15px; color:white; text-decoration:none; border-radius:4px;">Home</a></li>
 <li style="display:inline-block;"><a href="page2.html" style="background:lightblue; padding:8px 15px; color:white; text-decoration:none; border-radius:4px;">Tourist Attractions</a></li
-<li style="display:inline-block;"><a href="contact.html" style="background:lightblue; padding:8px 15px; color:white; text-decoration:none; border-radius:4px;">Stay</a></li>
+<li style="display:inline-block;"><a href="Stay.html" style="background:lightblue; padding:8px 15px; color:white; text-decoration:none; border-radius:4px;">Stay</a></li>
 <li style="display:inline-block;"><a href="contact.html" style="background:lightblue; padding:8px 15px; color:white; text-decoration:none; border-radius:4px;">Contact</a></li>
 
 </ul>
